--- a/ISB_Lab3.ipynb
+++ b/ISB_Lab3.ipynb
@@ -1,22 +1,7 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "ISB_Lab3.ipynb",
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gIscjbgOTxbO"
@@ -27,7 +12,7 @@
         "*Специальность \"Информационная безопасность автоматизированных систем\", 2 курс, 2 семестр*  \n",
         "\n",
         "Результат данной лабораторной работы - [гибридная криптосистема](https://www.youtube.com/watch?v=VPvZbMXfv_0) - будет сочетать в себе преимущества [симметричных](http://mf.grsu.by/UchProc/livak/b_protect/zok_2.htm) и [асимметричных](https://bstudy.net/905249/tehnika/asimmetrichnye_shifry) алгоритмов шифрования и в целом даже напоминать системы, использующиеся на практике. Симметричные алгоритмы работают быстрее ассиметричных и ими удобно шифровать большие объемы информации. Зато асимметричные алгоритмы не требуют наличия секретного канала для передачи ключа.   \n",
-        "Работать она будет следующим образом: сообщение шифруется при помощи симметричного алгоритма, а ключ симметричного алгоритма - ассиметричным. В качестве асимметричного алгоритма будет использоваться [RSA](http://www.michurin.net/computer-science/rsa.html), симметричный алгорим выбирается в соответствии с вариантом. Варианты приведены ниже (все шифры блочные).\n",
+        "Работать она будет следующим образом: сообщение шифруется при помощи симметричного алгоритма, а ключ симметричного алгоритма - ассиметричным. В качестве асимметричного алгоритма будет использоваться [RSA](http://www.michurin.net/computer-science/rsa.html), симметричный алгоритм выбирается в соответствии с вариантом. Варианты приведены ниже (все шифры блочные).\n",
         "\n"
       ]
     },
@@ -111,9 +96,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "LjgkhpKQlYAA"
       },
+      "outputs": [],
       "source": [
         "settings= {\n",
         "    'initial_file':'path/to/inital/file.txt',\n",
@@ -123,15 +110,23 @@
         "    'public_key':'path/to/public/key.pem',\n",
         "    'secret_key':'path/to/secret/key.pem',\n",
         "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "K_hNM6LxmzUO"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'initial_file': 'path/to/inital/file.txt', 'encrypted_file': 'path/to/encrypted/file.txt', 'decrypted_file': 'path/to/decrypted/file.txt', 'symmetric_key': 'path/to/symmetric/key.txt', 'public_key': 'path/to/public/key.pem', 'secret_key': 'path/to/secret/key.pem'}\n"
+          ]
+        }
+      ],
       "source": [
         "import json\n",
         "# пишем в файл\n",
@@ -142,9 +137,7 @@
         "    json_data = json.load(json_file)\n",
         "\n",
         "print(json_data)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,9 +150,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "vzJwbEEwIm3v"
       },
+      "outputs": [
+        {
+          "ename": "IndentationError",
+          "evalue": "expected an indented block (1841764136.py, line 11)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;36m  Cell \u001b[1;32mIn [9], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    else if args.encryption is not None:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ],
       "source": [
         "import argparse\n",
         "parser = argparse.ArgumentParser()\n",
@@ -175,36 +179,60 @@
         "  # шифруем\n",
         "else:\n",
         "  # дешифруем"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "t1ocn4B4jAv6"
       },
       "source": [
-        "##Работа с библиотекой cryptography\n",
+        "## Работа с библиотекой cryptography\n",
         "В данном разделе представлены примеры работы с библиотекой [cryptography](https://cryptography.io/en/latest/), которые могут вам пригодиться при выполнении данной лабораторной работы. Сама библиотека прекрасно задокументирована, так что, если вы владете английским языком, советую не проходить мимо. Если вы ко второму (третьему) курсу не владеете английским языком в мере, позволяющей вам читать технические тексты, то соболезную."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
-        "id": "2lIxNidGt3bZ"
+        "id": "2lIxNidGt3bZ",
+        "vscode": {
+          "languageId": "powershell"
+        }
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: cryptography in c:\\users\\79093\\.conda\\envs\\lab\\lib\\site-packages (40.0.1)\n",
+            "Requirement already satisfied: cffi>=1.12 in c:\\users\\79093\\.conda\\envs\\lab\\lib\\site-packages (from cryptography) (1.15.1)\n",
+            "Requirement already satisfied: pycparser in c:\\users\\79093\\.conda\\envs\\lab\\lib\\site-packages (from cffi>=1.12->cryptography) (2.21)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "pip install cryptography"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "id": "z_-ZWRjaTwJO"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'bytes'>\n",
+            "b'\\xb2\\xa8\\x8f\\x9f<\\xe1\\x80\\x9e\\xfbt\\xdfl\\xa6P\\xe6\\xc7\\x80;BxqL\\xeckLAC\\xf9\\xfc\\xad\\xf9\\xa2'\n"
+          ]
+        }
+      ],
       "source": [
         "# генерация ключа симметричного алгоритма шифрования\n",
         "import os #можно обойтись стандартным модулем\n",
@@ -213,29 +241,29 @@
         "\n",
         "print(type(key))\n",
         "print(key)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xacpzN4uqZ-i"
       },
+      "outputs": [],
       "source": [
         "# сериализация ключа симмеричного алгоритма в файл\n",
         "file_name = 'symmetric.txt'\n",
         "with open(file_name, 'wb') as key_file:\n",
         "  key_file.write(key)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "LL0jLslE1PJ2"
       },
+      "outputs": [],
       "source": [
         "# десериализация ключа симметричного алгоритма\n",
         "with open(file_name, mode='rb') as key_file: \n",
@@ -243,15 +271,15 @@
         "\n",
         "print(type(content))\n",
         "print(content)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8sMgJ3fH3yYX"
       },
+      "outputs": [],
       "source": [
         "# паддинг данных для работы блочного шифра - делаем длину сообщения кратной длине шифркуемого блока\n",
         "from cryptography.hazmat.primitives import padding\n",
@@ -262,15 +290,15 @@
         "\n",
         "print(text)\n",
         "print(padded_text)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "r5qAuZmnqoWh"
       },
+      "outputs": [],
       "source": [
         "# шифрование текста симметричным алгоритмом\n",
         "from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes\n",
@@ -281,15 +309,15 @@
         "c_text = encryptor.update(padded_text) + encryptor.finalize()\n",
         "\n",
         "print(c_text)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tZtJlqccqtg4"
       },
+      "outputs": [],
       "source": [
         "# дешифрование и депаддинг текста симметричным алгоритмом\n",
         "\n",
@@ -301,15 +329,15 @@
         "\n",
         "print(dc_text.decode('UTF-8'))\n",
         "print(unpadded_dc_text.decode('UTF-8'))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "6enRQI5hpvtp"
       },
+      "outputs": [],
       "source": [
         "# генерация пары ключей для асимметричного алгоритма шифрования\n",
         "from cryptography.hazmat.primitives.asymmetric import rsa\n",
@@ -326,15 +354,15 @@
         "print(private_key)\n",
         "print(type(public_key))\n",
         "print(public_key)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "r7j9V_HMqeAZ"
       },
+      "outputs": [],
       "source": [
         "# сериализация открытого ключа в файл\n",
         "public_pem = 'public.pem'\n",
@@ -348,15 +376,15 @@
         "        private_out.write(private_key.private_bytes(encoding=serialization.Encoding.PEM,\n",
         "              format=serialization.PrivateFormat.TraditionalOpenSSL,\n",
         "              encryption_algorithm=serialization.NoEncryption()))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nmBYMOpjqxOw"
       },
+      "outputs": [],
       "source": [
         "from cryptography.hazmat.primitives.serialization import load_pem_public_key, load_pem_private_key\n",
         "\n",
@@ -373,15 +401,15 @@
         "print(d_private_key)\n",
         "print(type(d_public_key))\n",
         "print(d_public_key)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "dFCQIx48rJ0G"
       },
+      "outputs": [],
       "source": [
         "from cryptography.hazmat.primitives.asymmetric import padding\n",
         "from cryptography.hazmat.primitives import hashes\n",
@@ -391,25 +419,24 @@
         "c_text = public_key.encrypt(text, padding.OAEP(mgf=padding.MGF1(algorithm=hashes.SHA256()),algorithm=hashes.SHA256(),label=None))\n",
         "\n",
         "print(c_text)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "oVmJJcEmrNWt"
       },
+      "outputs": [],
       "source": [
         "# дешифрование текста асимметричным алгоритмом\n",
         "dc_text = private_key.decrypt(c_text,padding.OAEP(mgf=padding.MGF1(algorithm=hashes.SHA256()),algorithm=hashes.SHA256(),label=None))\n",
         "\n",
         "print(dc_text.decode('UTF-8'))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-ytAMWrtA37O"
@@ -420,7 +447,7 @@
         "\n",
         "Грубо говоря, варианты (в основном) отличаются вызовом определенного метода библиотеки и длиной ключа, который необходимо сгенерировать. \n",
         "\n",
-        "*Помимо работающего приложения, для сдачи необходимо изучить и рассказать  исторические аспекты используемого симметричного алгоритма - когда, кем и для каких целей он был разработан, считается ли  сегодня криптостойким, к каким атакам алгоритм уязвим, принят ли он в качестве стандарта шифрования на официальном уровне каким-либо государством.*"
+        "*Помимо работающего приложения, для сдачи необходимо изучить и рассказать  исторические аспекты используемого симметричного алгоритма - когда, кем и для каких целей он был разработан, считается ли  сегодня криптостойким, к каким атакам алгоритм уязвим, принят ли он в качестве стандарта шифрования на официальном уровне каким-либо государством.*\n"
       ]
     },
     {
@@ -441,5 +468,30 @@
         "9. [**IDEA**](https://cryptography.io/en/latest/hazmat/primitives/symmetric-encryption/#cryptography.hazmat.primitives.ciphers.algorithms.ARC4), длина ключа 128 бит.  \n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "ISB_Lab3.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
